linux-4.9.88/arch/um/drivers/error.txt
In file included from ./include/linux/blkdev.h:4:0,
                 from arch/um/drivers/rdisk_kern.c:26:
./include/linux/sched.h:1951:10: note: #pragma message: USE_TASK_MUTEX
  #pragma message ("USE_TASK_MUTEX")
          ^~~~~~~
arch/um/drivers/rdisk_kern.c:46:8: error: unknown type name ‘proc_usr_t’
 extern proc_usr_t  uml_proc;
        ^~~~~~~~~~
arch/um/drivers/rdisk_kern.c:48:8: error: unknown type name ‘dvs_usr_t’
 extern dvs_usr_t  dvs;
        ^~~~~~~~~
arch/um/drivers/rdisk_kern.c:49:8: error: unknown type name ‘dc_usr_t’
 extern dc_usr_t  dcu;
        ^~~~~~~~
arch/um/drivers/rdisk_kern.c: In function ‘prepare_request’:
arch/um/drivers/rdisk_kern.c:376:16: warning: unused variable ‘rd_dev’ [-Wunused-variable]
  struct rdisk *rd_dev = disk->private_data;
                ^~~~~~
arch/um/drivers/rdisk_kern.c: In function ‘prepare_flush_request’:
arch/um/drivers/rdisk_kern.c:394:16: warning: unused variable ‘rd_dev’ [-Wunused-variable]
  struct rdisk *rd_dev = disk->private_data;
                ^~~~~~
arch/um/drivers/rdisk_kern.c: In function ‘do_rdisk’:
arch/um/drivers/rdisk_kern.c:512:9: error: implicit declaration of function ‘rdisk_read’ [-Werror=implicit-function-declaration]
     n = rdisk_read(buf, len, off);
         ^~~~~~~~~~
arch/um/drivers/rdisk_kern.c:521:8: error: implicit declaration of function ‘rdisk_write’ [-Werror=implicit-function-declaration]
    n = rdisk_write( buf, len, off);
        ^~~~~~~~~~~
arch/um/drivers/rdisk_kern.c:492:31: warning: unused variable ‘bit’ [-Wunused-variable]
  int n, nsectors, start, end, bit;
                               ^~~
arch/um/drivers/rdisk_kern.c: In function ‘init_rdisk’:
arch/um/drivers/rdisk_kern.c:542:2: error: unknown type name ‘dvs_usr_t’
  dvs_usr_t *dvsu_ptr;
  ^~~~~~~~~
arch/um/drivers/rdisk_kern.c:543:2: error: unknown type name ‘dc_usr_t’
  dc_usr_t *dcu_ptr;
  ^~~~~~~~
arch/um/drivers/rdisk_kern.c:544:2: error: unknown type name ‘proc_usr_t’
  proc_usr_t *proc_ptr;
  ^~~~~~~~~~
arch/um/drivers/rdisk_kern.c:546:10: error: implicit declaration of function ‘dvk_open’ [-Werror=implicit-function-declaration]
  rcode = dvk_open();
          ^~~~~~~~
arch/um/drivers/rdisk_kern.c:547:17: error: implicit declaration of function ‘ERROR_RETURN’ [-Werror=implicit-function-declaration]
  if( rcode < 0) ERROR_RETURN(rcode);
                 ^~~~~~~~~~~~
arch/um/drivers/rdisk_kern.c:550:17: error: implicit declaration of function ‘dvk_getdvsinfo’ [-Werror=implicit-function-declaration]
  local_nodeid = dvk_getdvsinfo(dvsu_ptr);
                 ^~~~~~~~~~~~~~
arch/um/drivers/rdisk_kern.c:552:2: error: implicit declaration of function ‘DVKDEBUG’ [-Werror=implicit-function-declaration]
  DVKDEBUG(INTERNAL,"local_nodeid=%d\n",local_nodeid);
  ^~~~~~~~
arch/um/drivers/rdisk_kern.c:552:11: error: ‘INTERNAL’ undeclared (first use in this function)
  DVKDEBUG(INTERNAL,"local_nodeid=%d\n",local_nodeid);
           ^~~~~~~~
arch/um/drivers/rdisk_kern.c:552:11: note: each undeclared identifier is reported only once for each function it appears in
arch/um/drivers/rdisk_kern.c:553:21: error: ‘DVS_USR_FORMAT’ undeclared (first use in this function)
  DVKDEBUG(INTERNAL, DVS_USR_FORMAT, DVS_USR_FIELDS(dvsu_ptr));
                     ^~~~~~~~~~~~~~
arch/um/drivers/rdisk_kern.c:553:37: error: implicit declaration of function ‘DVS_USR_FIELDS’ [-Werror=implicit-function-declaration]
  DVKDEBUG(INTERNAL, DVS_USR_FORMAT, DVS_USR_FIELDS(dvsu_ptr));
                                     ^~~~~~~~~~~~~~
arch/um/drivers/rdisk_kern.c:556:10: error: implicit declaration of function ‘dvk_getdcinfo’ [-Werror=implicit-function-declaration]
  rcode = dvk_getdcinfo(dcid, dcu_ptr);
          ^~~~~~~~~~~~~
arch/um/drivers/rdisk_kern.c:558:21: error: ‘DC_USR1_FORMAT’ undeclared (first use in this function)
  DVKDEBUG(INTERNAL, DC_USR1_FORMAT, DC_USR1_FIELDS(dcu_ptr));
                     ^~~~~~~~~~~~~~
arch/um/drivers/rdisk_kern.c:558:37: error: implicit declaration of function ‘DC_USR1_FIELDS’ [-Werror=implicit-function-declaration]
  DVKDEBUG(INTERNAL, DC_USR1_FORMAT, DC_USR1_FIELDS(dcu_ptr));
                                     ^~~~~~~~~~~~~~
arch/um/drivers/rdisk_kern.c:559:21: error: ‘DC_USR2_FORMAT’ undeclared (first use in this function)
  DVKDEBUG(INTERNAL, DC_USR2_FORMAT, DC_USR2_FIELDS(dcu_ptr));
                     ^~~~~~~~~~~~~~
arch/um/drivers/rdisk_kern.c:559:37: error: implicit declaration of function ‘DC_USR2_FIELDS’ [-Werror=implicit-function-declaration]
  DVKDEBUG(INTERNAL, DC_USR2_FORMAT, DC_USR2_FIELDS(dcu_ptr));
                                     ^~~~~~~~~~~~~~
arch/um/drivers/rdisk_kern.c:562:18: error: request for member ‘dc_nr_sysprocs’ in something not a structure or union
  for( i = dcu_ptr->dc_nr_sysprocs - dcu_ptr->dc_nr_procs;
                  ^~
arch/um/drivers/rdisk_kern.c:562:44: error: request for member ‘dc_nr_procs’ in something not a structure or union
  for( i = dcu_ptr->dc_nr_sysprocs - dcu_ptr->dc_nr_procs;
                                            ^~
arch/um/drivers/rdisk_kern.c:563:14: error: request for member ‘dc_nr_procs’ in something not a structure or union
   i < dcu_ptr->dc_nr_procs; i++){
              ^~
arch/um/drivers/rdisk_kern.c:564:12: error: implicit declaration of function ‘dvk_tbind’ [-Werror=implicit-function-declaration]
   rdc_ep = dvk_tbind(dcid, i);
            ^~~~~~~~~
arch/um/drivers/rdisk_kern.c:567:18: error: request for member ‘dc_nr_procs’ in something not a structure or union
  if( i == dcu_ptr->dc_nr_procs) ERROR_RETURN(EDVSSLOTUSED);
                  ^~
arch/um/drivers/rdisk_kern.c:567:46: error: ‘EDVSSLOTUSED’ undeclared (first use in this function)
  if( i == dcu_ptr->dc_nr_procs) ERROR_RETURN(EDVSSLOTUSED);
                                              ^~~~~~~~~~~~
arch/um/drivers/rdisk_kern.c:571:10: error: implicit declaration of function ‘dvk_getprocinfo’ [-Werror=implicit-function-declaration]
  rcode = dvk_getprocinfo(dcid, rdc_ep, proc_ptr);
          ^~~~~~~~~~~~~~~
arch/um/drivers/rdisk_kern.c:573:21: error: ‘PROC_USR_FORMAT’ undeclared (first use in this function)
  DVKDEBUG(INTERNAL, PROC_USR_FORMAT, PROC_USR_FIELDS(proc_ptr));
                     ^~~~~~~~~~~~~~~
arch/um/drivers/rdisk_kern.c:573:38: error: implicit declaration of function ‘PROC_USR_FIELDS’ [-Werror=implicit-function-declaration]
  DVKDEBUG(INTERNAL, PROC_USR_FORMAT, PROC_USR_FIELDS(proc_ptr));
                                      ^~~~~~~~~~~~~~~
arch/um/drivers/rdisk_kern.c:575:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
arch/um/drivers/rdisk_kern.c: At top level:
arch/um/drivers/rdisk_kern.c:90:12: warning: ‘rd_open’ used but never defined
 static int rd_open(struct block_device *bdev, fmode_t mode);
            ^~~~~~~
arch/um/drivers/rdisk_kern.c:91:13: warning: ‘rd_release’ used but never defined
 static void rd_release(struct gendisk *disk, fmode_t mode);
             ^~~~~~~~~~
arch/um/drivers/rdisk_kern.c:418:13: warning: ‘do_rd_request’ defined but not used [-Wunused-function]
 static void do_rd_request(struct request_queue *q)
             ^~~~~~~~~~~~~
arch/um/drivers/rdisk_kern.c:109:24: warning: ‘fake_gendisk’ defined but not used [-Wunused-variable]
 static struct gendisk *fake_gendisk[MAX_DEV];
                        ^~~~~~~~~~~~
arch/um/drivers/rdisk_kern.c:108:24: warning: ‘rd_gendisk’ defined but not used [-Wunused-variable]
 static struct gendisk *rd_gendisk[MAX_DEV];
                        ^~~~~~~~~~
arch/um/drivers/rdisk_kern.c:107:15: warning: ‘fake_major’ defined but not used [-Wunused-variable]
 static int    fake_major = RD_MAJOR;
               ^~~~~~~~~~
cc1: some warnings being treated as errors
make[1]: *** [arch/um/drivers/rdisk_kern.o] Error 1
make: *** [arch/um/drivers] Error 2
